--- a/summative/API/render.yaml
+++ b/summative/API/render.yaml
@@ -1,17 +1,8 @@
 services:
   - type: web
     name: east-africa-digital-readiness-api
-    env: python
+    runtime: docker
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: python main.py
-    envVars:
-      - key: PORT
-        value: 8000
-      - key: PYTHON_VERSION
-        value: 3.12.0
+    rootDir: ./summative/API
+    dockerCommand: python main.py
     healthCheckPath: /health
-    disk:
-      name: api-disk
-      mountPath: /data
-      sizeGB: 1
