--- a/summative/API/requirements.txt
+++ b/summative/API/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-numpy==1.24.3
-scikit-learn==1.3.0
-joblib==1.3.2
-python-multipart==0.0.6
+fastapi>=0.104.0,<0.105.0
+uvicorn[standard]>=0.24.0,<0.25.0
+pydantic>=2.5.0,<3.0.0
+numpy>=1.24.0,<2.0.0
+scikit-learn>=1.3.0,<2.0.0
+joblib>=1.3.0,<2.0.0
+python-multipart>=0.0.6
